Search Integration with UI

--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,11 @@
 		
 		<div id="main-content">
 			
-			<div class="row resume-part" id="about">
+			<div class="row view-section" id="about">
 				<div class="col-sm-3">
 					<h2 class="text-primary">ProductGrabber</h2>
 				</div>
-				<div class="col-sm-9 resume-part-details">
+				<div class="col-sm-9 view-section-details">
 					<p>Tired of going to multiple websites to get the best price for a product? Worry no more! Get the best price for a product from a single interface 
 					in ProductGrabber.</p>
 
@@ -57,11 +57,11 @@
 				</div>
 			</div>
 			
-			<div class="row resume-part" id="howItWorks">
+			<div class="row view-section" id="howItWorks">
 				<div class="col-sm-3">
 					<h2 class="text-primary">How it works</h2>
 				</div>
-				<div class="col-sm-9 resume-part-details">
+				<div class="col-sm-9 view-section-details">
 					<div class="input-group">
 					  <p>
 						<ol>
@@ -76,11 +76,11 @@
 				</div>
 			</div>
 			
-			<div class="row resume-part" id="search">
+			<div class="row view-section" id="search">
 				<div class="col-sm-3">
 					<h2 class="text-primary">Search</h2>
 				</div>
-				<div class="col-sm-9 resume-part-details">
+				<div class="col-sm-9 view-section-details">
 					<div class="input-group">
 					  <input type="text" class="form-control" placeholder="Search for products" id="txt-search-product">
 					  <span class="input-group-btn">
@@ -93,7 +93,7 @@
 		</div>
 		
 		<div id="footer">
-			<p>© 2015 ProductGrabber Team&nbsp;&nbsp;|&nbsp;&nbsp;
+			<p>Â© 2015 ProductGrabber Team&nbsp;&nbsp;|&nbsp;&nbsp;
 			<a href="#attributions-modal" data-toggle="modal" data-target="#attributions-modal">Attributions</a></p>
 			<p></p>
 		</div>
